src/parser/snapshots/nox__parser__tests__return_statement.snap
---
source: src/parser/tests.rs
expression: chunk.code
---
[
    ReadConstant(0),
    Return,
    PushNil,
    Return,
]
